# p4kt

./: .gitignore  .hadolint.yaml  .yamllint.yml  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  detekt.yml  dev  dprint.json  mkdocs.yml  settings.gradle.kts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  devcontainer.yml  docs.yml
docs/: control-tables-plan.md  control-tables-spec.md  design.md  dev.md  examples.md  index.md
docs/milestones/: dsl-ergonomics.md  typed-field-access-plan.md  typed-field-access.md  vss-slice1-delegation-plan.md  vss-slice1-delegation.md  vss-slice1-program-plan.md  vss-slice1-program.md  vss-slice1-types-plan.md  vss-slice1-types.md  vss-slice2-expressions-plan.md  vss-slice2-expressions.md  vss.md
docs/stylesheets/: extra.css
examples/: BUILD.bazel  GoldenTest.kt  build.gradle.kts  identity.kt  identity.p4  max.kt  max.p4  ttl_decrement.kt  ttl_decrement.p4  v1model_basic.kt  v1model_basic.p4  vss.kt  vss.p4  vss_actions.kt  vss_actions.p4  vss_arch.kt  vss_arch.p4  vss_example.kt  vss_example.p4  vss_types.kt  vss_types.p4
p4kt/: BUILD.bazel  Builders.kt  Dsl.kt  Emit.kt  Ir.kt  P4.kt  P4ActionTest.kt  P4ConstTest.kt  P4ControlTest.kt  P4ExpressionTest.kt  P4ExternTest.kt  P4FunctionTest.kt  P4HeaderTest.kt  P4ParserTest.kt  P4ProgramTest.kt  P4RefTest.kt  P4StatementTest.kt  P4StructTest.kt  P4TypedefTest.kt  P4kt.kt  P4ktTest.kt  build.gradle.kts
p4kt/p4include/: BUILD.bazel  Core.kt  CoreTest.kt  V1model.kt  V1modelTest.kt  core.p4  v1model.p4
p4kt/src/main/kotlin/p4kt/: Builders.kt  Emit.kt  P4.kt
p4kt/src/main/kotlin/p4kt/p4include/: core.kt  v1model.kt
p4kt/src/test/kotlin/p4kt/: P4ActionTest.kt  P4ConstTest.kt  P4ControlTest.kt  P4ErrorTest.kt  P4ExpressionTest.kt  P4ExternTest.kt  P4FunctionTest.kt  P4HeaderTest.kt  P4IncludeTest.kt  P4ParserTest.kt  P4ProgramTest.kt  P4RefTest.kt  P4StatementTest.kt  P4StructTest.kt  P4TypeDeclTest.kt  P4TypedefTest.kt
p4kt/src/test/kotlin/p4kt/p4include/: GoldenTest.kt
p4kt/src/test/resources/p4kt/p4include/: core.p4  v1model.p4
tools/: BUILD.bazel  docs.sh  format.sh  generate_examples_doc.sh  golden_test.bzl  golden_test.sh  lint.sh  pre-commit
