module(
    name = "p4kt",
    version = "0.0.0",
)

bazel_dep(name = "rules_kotlin", version = "2.3.10")
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "org.jetbrains.kotlin:kotlin-test:2.1.10",
        "org.jetbrains.kotlin:kotlin-test-junit5:2.1.10",
        "org.junit.jupiter:junit-jupiter-api:5.12.2",
        "org.junit.jupiter:junit-jupiter-engine:5.12.2",
        "org.junit.platform:junit-platform-launcher:1.12.2",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven")
