load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "vss_arch_lib",
    srcs = ["vss_arch.kt"],
    deps = ["//p4kt"],
)

kt_jvm_library(
    name = "vss_example_lib",
    srcs = ["vss_example.kt"],
    deps = [
        ":vss_arch_lib",
        "//p4kt:p4include",
    ],
)

kt_jvm_test(
    name = "GoldenTest",
    srcs = ["GoldenTest.kt"],
    data = [
        "vss_arch.p4",
        "vss_example.p4",
    ],
    test_class = "p4kt.examples.GoldenTest",
    deps = [
        ":vss_arch_lib",
        ":vss_example_lib",
        "//p4kt:p4include",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)
