load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

# p4kt library

kt_jvm_library(
    name = "p4kt",
    srcs = glob(["src/main/kotlin/p4kt/*.kt"]),
    visibility = ["//visibility:public"],
)

kt_jvm_test(
    name = "P4ActionTest",
    srcs = ["src/test/kotlin/p4kt/P4ActionTest.kt"],
    test_class = "p4kt.P4ActionTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4ConstTest",
    srcs = ["src/test/kotlin/p4kt/P4ConstTest.kt"],
    test_class = "p4kt.P4ConstTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4ControlTest",
    srcs = ["src/test/kotlin/p4kt/P4ControlTest.kt"],
    test_class = "p4kt.P4ControlTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4ErrorTest",
    srcs = ["src/test/kotlin/p4kt/P4ErrorTest.kt"],
    test_class = "p4kt.P4ErrorTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4ExpressionTest",
    srcs = ["src/test/kotlin/p4kt/P4ExpressionTest.kt"],
    test_class = "p4kt.P4ExpressionTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4ExternTest",
    srcs = ["src/test/kotlin/p4kt/P4ExternTest.kt"],
    test_class = "p4kt.P4ExternTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4FunctionTest",
    srcs = ["src/test/kotlin/p4kt/P4FunctionTest.kt"],
    test_class = "p4kt.P4FunctionTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4HeaderTest",
    srcs = ["src/test/kotlin/p4kt/P4HeaderTest.kt"],
    test_class = "p4kt.P4HeaderTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4ParserTest",
    srcs = ["src/test/kotlin/p4kt/P4ParserTest.kt"],
    test_class = "p4kt.P4ParserTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4ProgramTest",
    srcs = ["src/test/kotlin/p4kt/P4ProgramTest.kt"],
    test_class = "p4kt.P4ProgramTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4RefTest",
    srcs = ["src/test/kotlin/p4kt/P4RefTest.kt"],
    test_class = "p4kt.P4RefTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4StatementTest",
    srcs = ["src/test/kotlin/p4kt/P4StatementTest.kt"],
    test_class = "p4kt.P4StatementTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4StructTest",
    srcs = ["src/test/kotlin/p4kt/P4StructTest.kt"],
    test_class = "p4kt.P4StructTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4TypeDeclTest",
    srcs = ["src/test/kotlin/p4kt/P4TypeDeclTest.kt"],
    test_class = "p4kt.P4TypeDeclTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "P4TypedefTest",
    srcs = ["src/test/kotlin/p4kt/P4TypedefTest.kt"],
    test_class = "p4kt.P4TypedefTest",
    deps = [
        ":p4kt",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

# p4include library

kt_jvm_library(
    name = "p4include",
    srcs = glob(["src/main/kotlin/p4kt/p4include/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [":p4kt"],
)

kt_jvm_test(
    name = "GoldenTest",
    srcs = ["src/test/kotlin/p4kt/p4include/GoldenTest.kt"],
    data = [
        "src/test/resources/p4kt/p4include/core.p4",
        "src/test/resources/p4kt/p4include/v1model.p4",
    ],
    test_class = "p4kt.p4include.GoldenTest",
    deps = [
        ":p4include",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)
